# quick-translate

./: .gitignore  quick_translate.py
quick-translate-rs/: Cargo.toml  README.md
quick-translate-rs/src/: clipboard.rs  config.rs  lang.rs  main.rs  popup.rs  translator.rs  tray.rs
